--- a/UltimatePortfolio.xcodeproj/xcshareddata/xcschemes/UltimatePortfolioUITests.xcscheme
+++ b/UltimatePortfolio.xcodeproj/xcshareddata/xcschemes/UltimatePortfolioUITests.xcscheme
@@ -5,22 +5,6 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "417E5E472B55EE5F002F8B87"
-               BuildableName = "UltimatePortfolio.app"
-               BlueprintName = "UltimatePortfolio"
-               ReferencedContainer = "container:UltimatePortfolio.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -32,19 +16,11 @@
             reference = "container:UltimatePortfolioTests/UltimatePortfolio.xctestplan"
             default = "YES">
          </TestPlanReference>
+         <TestPlanReference
+            reference = "container:UltimatePortfolioUITests/UltimatePortfolioUITests.xctestplan">
+         </TestPlanReference>
       </TestPlans>
       <Testables>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "41F799852B672FED00071C84"
-               BuildableName = "UltimatePortfolioTests.xctest"
-               BlueprintName = "UltimatePortfolioTests"
-               ReferencedContainer = "container:UltimatePortfolio.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
          <TestableReference
             skipped = "NO"
             parallelizable = "YES">
@@ -85,16 +61,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "417E5E472B55EE5F002F8B87"
-            BuildableName = "UltimatePortfolio.app"
-            BlueprintName = "UltimatePortfolio"
-            ReferencedContainer = "container:UltimatePortfolio.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
