--- a/UltimatePortfolio.xcodeproj/xcshareddata/xcschemes/UltimatePortfolio.xcscheme
+++ b/UltimatePortfolio.xcodeproj/xcshareddata/xcschemes/UltimatePortfolio.xcscheme
@@ -78,6 +78,9 @@
             ReferencedContainer = "container:UltimatePortfolio.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../../UltimatePortfolio/Configuration/Configuration.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
